kubernetes/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend
          image: suryasuraj/client
          imagePullPolicy: Always

          ports:
            - containerPort: 5173

          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"
