kubernetes/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service

spec:
  type: ClusterIP

  selector:
    app: backend

  ports:
    - port: 7777
      targetPort: 7777
      name: http
