kubernetes/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service

spec:
  # type: LoadBalancer      #directly get a lb and can access frontend through it 
  type: ClusterIP

  selector:
    app: frontend

  ports:
    - port: 80
      targetPort: 80
